let room and teachers scroll if they overflow their element, fixes #48

--- a/assets/current-view.less
+++ b/assets/current-view.less
@@ -125,6 +125,19 @@ body {
             .flex-order(4);
         }
 
+        .time, .title {
+            font-size: 0.75rem;
+
+            &::first-line {
+                font-size: 1rem;
+            }
+        }
+
+        .room, .teachers {
+            max-height: 1.2em;
+            overflow: hidden;
+        }
+
         &:not(:first-child) {
             border-top: 1px solid #a2b3cd;
         }
